# lens

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
conf/squid/: bump.crt  bump.key  bump_dhparam.pem  mime.conf  squid.conf
dashboard-objects/: export.ndjson
icap/: Dockerfile
icap/server/: __main__.py
squid/: Dockerfile
squid/analyzer/: Cargo.toml  Makefile
squid/analyzer/src/: lib.rs
squid/conf/: squid.conf
squid/patch/: adapter_async.cc  adapter_modifying.cc
squid/prism/: Makefile.am  Makefile.in  README.md  configure.ac  configure~
squid/prism/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
squid/prism/src/: prism.cc
