[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "analyzer"
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli-decompressor = "2.3.4"
flate2 = "1.0"
log = "0.4.18"
syslog = "6.1.0"
zstream = { git = "https://github.com/dpereira/zstream-rs.git", branch = "feat/configurable-buffer-size", version = "0.1.0" }
